--- a/views/dynamics/minfo/Auth.module.css
+++ b/views/dynamics/minfo/Auth.module.css
@@ -1,18 +1,137 @@
-.info{
-    width: 28rem;
-    margin-top: 10rem;
-    direction: rtl;
-    font-size: 16px;
-    font-weight: 700;
-    text-align: center;
+.con{
+    width: 100%;
+    height: 100vh;
+    min-height: 42rem;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
-.btn{
-    width: 20rem;
+
+.wrapper_card{
+    min-height: 36rem;
+    width: 26rem;
     border-radius: 1rem;
-    border-style: solid;
-    border-width: 2px;
-    margin-top: 3rem;
+    background-color: white;
+}
+
+.con1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem 1rem;
+    direction: rtl;
+}
+
+.image1{
+    height: 6rem;
+    margin-top: 4rem;
+}
+
+.title1{
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-top: 2rem;
+}
+
+.title2{
+    font-size: 1rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+.sub1{
+    margin-top: 2rem;
+    font-size: 0.8rem;
+    text-align: center;
+    max-width: 90%;
+}
+
+.sub2{
+    margin-top: 0.8rem;
+    font-size: 0.65rem;
+    text-align: center;
+    width: 18rem;
+}
+
+.comp1{
+    width: 86% !important;
+    max-width: 20rem !important;
+    margin-top: 8rem;
+}
+
+.comp2{
+    width: 86% !important;
+    max-width: 20rem !important;
+    margin-top: 1rem;
+}
+
+.submit1{
+    width: 16rem;
+    margin-top: 6rem;
+}
+
+.submit2{
+    width: 16rem;
+    margin-top: 4.2rem;
+}
+
+.submit3{
+    width: 16rem;
+    margin-top: 2.8rem;
+}
+
+.submit4{
+    width: 16rem;
+    margin-top: 1rem;
+}
+
+.submit5{
+    width: 16rem;
+    margin-top: 12rem;
+}
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .wrapper_card{
+        width: 20rem;
+        margin-bottom: 2rem;
+    }
+
+    .comp1{
+        height: 3.2rem !important;
+    }
+    
+    .comp2{
+        height: 3.2rem !important;
+    }
+
+    .submit1{
+        width: 16rem;
+        margin-top: 5rem;
+    }
+    
+    .submit2{
+        width: 16rem;
+        margin-top: 3.8rem;
+    }
+    
+    .submit3{
+        width: 16rem;
+        margin-top: 1.8rem;
+    }
+    
+    .submit4{
+        width: 16rem;
+        margin-top: 0rem;
+    }
+    
+    .submit5{
+        width: 16rem;
+        margin-top: 11.4rem;
+    }
 }
