--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -97,14 +97,32 @@
     margin-left: 1rem;
 }
 
-.logout_con{
+.left_side{
     position: absolute;
     left: 1.5rem;
-    top: 1.5rem;
+    top: .5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.link_con{
     display: flex;
     align-items: center;
     cursor: pointer;
     user-select: none;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.home_icon{
+    color: white;
+    font-size: 1.2rem;
+    margin-right: 0.2rem;
+    margin-left: 0.3rem;
+    padding-bottom: 0.3rem;
 }
 
 .logout_img{
