--- a/views/components/editCourse/EditCourseIntroVideo.module.css
+++ b/views/components/editCourse/EditCourseIntroVideo.module.css
@@ -13,6 +13,13 @@
     overflow: hidden;
 }
 
+.info_sec{
+    padding: 0 3rem;
+    margin-top: 1rem;
+    padding-bottom: 0.5rem;
+    width: 100%;
+}
+
 @media(max-width:1024px){
     
 }
