--- a/views/dynamics/minfo/SelectSite.module.css
+++ b/views/dynamics/minfo/SelectSite.module.css
@@ -8,22 +8,28 @@
 
 .wrapper{
     direction: rtl;
-    padding: 2rem;
+    padding: 3rem;
+    max-width: 92vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    border-radius: 1rem;
 }
 
 .title{
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
     text-align: center;
 }
 
 .textInput{
-    margin-top: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    
 }
 
 .input{
     text-align: center !important;
+    
 }
