--- a/views/components/homePage/InfoBox.module.css
+++ b/views/components/homePage/InfoBox.module.css
@@ -57,6 +57,9 @@
     padding: 3rem 5%;
     padding-top: 3.6rem;
     padding-left: 7vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .wm_card_right{
@@ -70,6 +73,9 @@
     padding: 3rem 5%;
     padding-top: 3.6rem;
     padding-right: 7vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .wm_wrapper_left{
@@ -77,6 +83,7 @@
     min-height: 20rem;
     display: flex;
     justify-content: space-between;
+    max-width: 60rem;
 }
 
 .wm_wrapper_right{
@@ -85,6 +92,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+    max-width: 60rem;
 }
 
 .wm_title_sec{
@@ -110,7 +118,7 @@
 }
 
 .wm_media_con{
-    width: calc(40% - 3rem);
+    width: calc(50% - 3rem);
     height: auto;
     display: flex;
     align-items: center;
@@ -124,7 +132,7 @@
 }
 
 .wm_sec1{
-    width: calc(60% - 2rem);
+    width: calc(50% - 2rem);
     min-height: 16rem;
     display: flex;
     flex-direction: column;
@@ -137,6 +145,8 @@
     direction: rtl;
     padding: 1.5rem 0;
     line-height: 1.9rem;
+    font-weight: 500;
+    white-space: pre-wrap;
 }
 
 .wm_link{
