--- a/views/components/layouts/IndexHeader.module.css
+++ b/views/components/layouts/IndexHeader.module.css
@@ -38,7 +38,11 @@
     height: 100%;
     width: auto;
     cursor: pointer;
+    -webkit-user-drag: none;
     user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .dt_links_con{
