--- a/views/components/modal/editHomePage/SwitchIntroElementModal.module.css
+++ b/views/components/modal/editHomePage/SwitchIntroElementModal.module.css
@@ -72,7 +72,7 @@
 .info2{
     width: 100%;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 .type_select_sec{
@@ -101,6 +101,12 @@
 .updload_media{
     width: 100%;
     margin-top: 1rem;
+}
+
+.guide_image{
+    height: 12rem;
+    margin: 1rem;
+    border-radius: 1rem;
 }
 
 .confirm_btn{
