--- a/views/components/course/ContentCard.module.css
+++ b/views/components/course/ContentCard.module.css
@@ -37,31 +37,27 @@
     font-weight: 500;
 }
 
-.crow_dl{
+.crow_icon_con{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.6rem;
     font-size: 0.8rem !important;
-    height: 1.2rem;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
+    height: 1.6rem;
     font-weight: 400;
-}
-
-.crow_play{
-    font-size: 0.8rem !important;
-    height: 1.2rem;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    /* margin-left: 0.5rem; */
-    font-weight: 400;
-}
-
-.crow_locked{
-    font-size: 0.8rem !important;
-    height: 1.2rem;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    opacity: 0.7;
-    font-weight: 400;
+    border-radius: 0.4rem;
+    background-color: #E9E9E9;
+    padding: 0.2rem 0;
+    padding-right: 1rem;
+    cursor: pointer;
     user-select: none;
+}
+
+.crow_icon{
+    margin-left: 0.2rem;
+    height: 1.2rem;
+    position: absolute;
+    right: 0.2rem;
 }
 
 .crow_free_t{
