--- a/views/components/course/CourseBanner.module.css
+++ b/views/components/course/CourseBanner.module.css
@@ -6,7 +6,7 @@
     background-size: cover;
     border-radius: 0 0 1rem 1rem;
     box-shadow: 0 0.5rem 1rem 0.1rem rgb(0, 0, 0, 0.15);
-    filter: brightness(0.3);
+    filter: brightness(0.25);
     position: absolute;
     right: 0;
     left: 0;
@@ -24,6 +24,22 @@
     margin-top: 2rem;
     user-select: none;
     direction: rtl;
+}
+
+.educator_con{
+    display: flex;
+    direction: rtl;
+    margin-top: 0.5rem;
+    font-size: 0.92rem;
+    font-weight: 500;
+    color: white;
+}
+
+.educator_icon{
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
 }
 
 .row1{
@@ -61,6 +77,7 @@
 .row2{
     direction: rtl;
     width: calc(100% - 20rem);
+    max-width: 64rem;
     padding: 0.8rem 0.8rem;
     line-height: 1.8rem;
     min-height: 6rem;
@@ -134,6 +151,16 @@
         width: calc(80vw - 8rem);
         height: calc( (80vw - 8rem) * 0.5625);
         margin-top: 1rem;
+    }
+
+    .default_intro_video_image{
+        width: calc(60vw - 8rem);
+        height: calc(60vw - 8rem);
+        margin-top: 1rem;
+        border-radius: 1rem;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
     .tablet_sec1{
