--- a/views/components/course/FloatingCard.module.css
+++ b/views/components/course/FloatingCard.module.css
@@ -16,6 +16,15 @@
     box-shadow: 0 0.5rem 1rem 0.1rem rgb(0, 0, 0, 0.15);
 }
 
+.fltcrd_video_default_img{
+    width: 16rem;
+    height: calc(16rem * 0.5625);
+    border-radius: 1rem;
+    background-position: center;
+    background-size: cover;
+    box-shadow: 0 0.5rem 1rem 0.1rem rgb(0, 0, 0, 0.15);
+}
+
 .fltcrd_video_playbtn{
     width: 2.6rem !important;
     height: 2.6rem !important;
