--- a/views/components/global/TextInput.module.css
+++ b/views/components/global/TextInput.module.css
@@ -31,6 +31,7 @@
     right: 1rem;
     font-weight: 500;
     direction: rtl;
+    white-space: nowrap;
 }
 
 .top_title{
@@ -40,5 +41,4 @@
     top: -0.5rem;
     right: 0.8rem;
     font-size: 0.66rem;
-
 }
