--- a/views/dynamics/dashboard/PreviewCourse.module.css
+++ b/views/dynamics/dashboard/PreviewCourse.module.css
@@ -4,9 +4,10 @@
     flex-direction: column;
     align-items: flex-end;
     direction: ltr;
-    height: 22.5rem;
+    /* height: 22.5rem; */
     width: 100%;
     padding-right: 2rem;
+    padding-bottom: 1rem;
 }
 
 .sec2{
@@ -28,8 +29,8 @@
 }
 
 .crs_points{
-    padding-right: 0;
-    margin-top: 0.5rem;
+    padding-right: 0 !important;
+    margin-top: 0.5rem !important;
 }
 
 .crs_points_icn{
@@ -43,12 +44,10 @@
 .req_sec{
     margin-top: 1rem;
     width: calc(86% - 14rem);
-    color: #7a7a7a;
     padding: 1rem;
     padding-right: 4rem;
     padding-left: 2.5rem;
     border-radius: 1rem 0 0 1rem;
-    background-color: #F9F9F9;
     box-shadow: 0 0.5rem 1rem 0.1rem rgb(0, 0, 0, 0.15);
 }
 
