--- a/views/dynamics/index/Course.module.css
+++ b/views/dynamics/index/Course.module.css
@@ -4,9 +4,10 @@
     flex-direction: column;
     align-items: flex-end;
     direction: ltr;
-    height: 22.5rem;
+    /* height: 22.5rem; */
     width: 100%;
     padding-right: 2rem;
+    padding-bottom: 1rem;
 }
 
 .sec2{
