--- a/views/components/layouts/IndexFooter.module.css
+++ b/views/components/layouts/IndexFooter.module.css
@@ -1,12 +1,14 @@
 .con{
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 2rem calc(2rem + 5vw);
     padding-bottom: 1rem;
 }
 
 .contact_numbers{
     display: flex;
     direction: rtl;
+    width: 100%;
+    max-width: 96rem;
 }
 
 .number{
@@ -16,12 +18,7 @@
 
 .social_links_con{
     width: 100%;
-    display: flex;
-    align-items: center;   
-}
-
-.social_links_con{
-    width: 100%;
+    max-width: 96rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,6 +34,7 @@
     text-align: center;
     direction: rtl;
     margin-top: 2rem;
+    max-width: 96rem;
 }
 
 
@@ -50,6 +48,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 2rem 1rem;
     }
 
     .contact_numbers{
