--- a/views/dynamics/index/ViewHelp.module.css
+++ b/views/dynamics/index/ViewHelp.module.css
@@ -61,3 +61,59 @@
     width: calc(96% - 4rem);
     margin-top: 4rem;
 }
+
+.bread_crumb_con{
+    width: calc(96% - 4rem);
+    height: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    direction: rtl;
+}
+
+.content_con{
+    width: calc(96% - 4rem);
+    display: flex;
+    margin-top: 1rem;
+    justify-items: start;
+    align-content: flex-start;
+    justify-content: center;
+}
+
+.content_wrapper{
+    width: calc(100% - 18rem);
+    margin-right: 2rem;
+    min-height: 80rem;
+}
+
+.right_heading_tree_con{
+    width: 16rem;
+    height: fit-content;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 1rem;
+    direction: rtl;
+}
+
+.tree_title{
+    font-size: 0.84rem;
+    font-weight: 500;
+    margin-top: 0.4rem;
+    cursor: pointer;
+    user-select: none;
+}
+
+.tree_sub{
+    font-size: 0.8rem;
+    font-weight: 400;
+    margin-top: 0.4rem;
+    margin-right: 0.7rem;
+    cursor: pointer;
+    user-select: none;
+}
+
+.selected_tree_itme{
+    color: rgb(129, 129, 255);
+    font-weight: 500;
+    font-size: 0.9rem;
+}
