--- a/views/dynamics/index/Help.module.css
+++ b/views/dynamics/index/Help.module.css
@@ -9,8 +9,9 @@
 
 .white_con{
     width: calc(96% - 4rem);
-    height: calc(100vh - 16rem);
-    min-height: 32rem;
+    height: calc(40vw + 5rem);
+    min-height: 18vw;
+    max-height: 40rem;
     border-radius: 0 0 1rem 1rem;
     background-color: white;
 }
@@ -70,4 +71,60 @@
 .section_con{
     width: calc(96% - 4rem);
     margin-top: 4rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+
+    .white_con{
+        width: calc(100% - 2rem);
+        height: 28rem;
+        min-height: none;
+        max-height: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .search_bg_img{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        padding: 20% 5%;
+        padding-top: 5%;
+        opacity: 0.8;
+    }
+
+    .search_title{
+        font-size: 2rem;
+        font-weight: 700;
+        position: relative;
+        right: 0;
+        top: 0;
+        margin-top: 44%;
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 0.6rem 1rem;
+        border-radius: 0.7rem;
+    }
+    
+    .search_input_con{
+        width: 80% !important;
+        position: relative;
+        right: 0;
+        top: 0;
+        margin-top: 1rem;
+        font-size: 0.94rem;
+    }
+
+    .section_con{
+        width: calc(100% - 2rem);
+        margin-top: 4rem;
+    }
+    
 }
