--- a/views/components/layouts/IndexFooter.module.css
+++ b/views/components/layouts/IndexFooter.module.css
@@ -1,7 +1,9 @@
 .con{
-    width: 100%;
+    width: calc(100% - 2rem);
     padding: 2rem calc(2rem + 5vw);
     padding-bottom: 1rem;
+    margin-top: 2rem;
+    border-radius: 1rem 1rem 0 0;
 }
 
 .contact_numbers{
