--- a/views/dynamics/index/ContactUs.module.css
+++ b/views/dynamics/index/ContactUs.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white !important;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .con{
