--- a/views/components/editHomePage/EditableElementCard.module.css
+++ b/views/components/editHomePage/EditableElementCard.module.css
@@ -62,6 +62,12 @@
     box-shadow: 2px 0 16px 1px rgb(168, 168, 168);
 }
 
+.control_sec:hover,
+.control_sec2:hover{
+    background: rgb(251,173,22);
+    background: linear-gradient(45deg, rgba(251,173,22,1) 0%, rgba(245,223,77,1) 80%);
+}
+
 .delete_icon{
     width: 1.3rem;
 }
