--- a/views/components/global/CourseCard.module.css
+++ b/views/components/global/CourseCard.module.css
@@ -6,6 +6,10 @@
     overflow: hidden;
 }
 
+.con:hover{
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
 .card_image{
     height: 10rem;
     width: 100%;
