--- a/views/components/help/MainHelpSection.module.css
+++ b/views/components/help/MainHelpSection.module.css
@@ -2,16 +2,16 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .sec_title{
     background-color: white;
-    width: 100%;
+    width: 100vw;
     height: 4.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 1rem;
     font-weight: 700;
     font-size: 1.2rem;
     cursor: pointer;
