--- a/views/components/store/RightSideFilter.module.css
+++ b/views/components/store/RightSideFilter.module.css
@@ -10,6 +10,23 @@
     padding: 1.5rem;
 }
 
+.search_top>span>span>span{
+    border: none !important;
+    border-radius: 0.5rem !important;
+}
+
+.search_top>span>span>span>button{
+    border: none !important;
+}
+
+.search_top{
+    margin-bottom: 1rem;
+    border-style: solid;
+    border-width: 2px;
+    padding: 0.5rem;
+    border-radius: 0.7rem;
+}
+
 .title{
     margin-bottom: 1rem;
     font-weight: 500;
@@ -81,15 +98,17 @@
 
 .l1{
     opacity: 1;
+    font-weight: 700;
     color: rgb(62, 139, 255);
 }
 
 .l2{
     opacity: 0.96;
+    font-weight: 500;
     color:rgb(162, 112, 255);
 }
 
 .l3{
-    opacity: 0.88;
-    font-weight: 500;
+    opacity: 0.84;
+    font-weight: 400;
 }
