--- a/views/dynamics/index/Help.module.css
+++ b/views/dynamics/index/Help.module.css
@@ -8,10 +8,10 @@
 }
 
 .white_con{
-    width: calc(96% - 4rem);
+    width: calc(96vw - 4rem);
     height: calc(40vw + 5rem);
     min-height: 18vw;
-    max-height: 40rem;
+    max-height: 38rem;
     border-radius: 0 0 1rem 1rem;
 }
 
@@ -20,6 +20,7 @@
     left: 2rem;
     top: 1rem;
     width: 50%;
+    max-height: 96%;
 }
 
 .search_title{
