--- a/views/dynamics/index/Store.module.css
+++ b/views/dynamics/index/Store.module.css
@@ -5,7 +5,6 @@
     flex-direction: row-reverse;
     direction: ltr;
     padding: 0 3rem;
-    background-color: #f5f5f5;
     /* background-color: rgb(253, 236, 236); */
 }
 
@@ -21,6 +20,7 @@
     margin-top: 1rem;
     min-height: calc(70vh - 5.6rem);
     padding-bottom: 5rem;
+    background-color: transparent !important;
 }
 
 .course_loading{
