--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -28,13 +28,15 @@
 
 .upper_sec{
     width: calc(100vw - 4rem);
-    height: 6rem;
+    height: 10rem;
     background: rgb(2,0,36);
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgb(0, 0, 71) 35%, rgb(0, 10, 95) 100%);
     border-radius: 0 0 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: rgb(62,62,62);
+    background: radial-gradient(circle, rgba(62,62,62,1) 0%, rgba(21,21,21,1) 100%);
 }
 
 .mock_footer{
@@ -54,6 +56,8 @@
 .tab_btn_wrapper{
     display: flex;
     align-items: center;
+    position: absolute;
+    bottom: 0.2rem;
 }
 
 .tab_btn{
@@ -81,13 +85,19 @@
 
 .username{
     font-weight: 400;
-    width: 100%;
-    padding-right: calc(2rem + 5%);
+    width: auto;
+    position: absolute;
+    padding: 2rem;
+    padding-left: 2.5rem;
     height: 2.5rem;
-    margin-top: 1.4rem;
     display: flex;
     align-items: center;
     user-select: none;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 0.8rem;
+    top: 2rem;
+    right: 2rem;
 }
 
 .user_icon{
@@ -100,7 +110,7 @@
 .left_side{
     position: absolute;
     left: 1.5rem;
-    top: .5rem;
+    top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,19 +156,34 @@
 
     .upper_sec{
         width: 100vw;
+        height: 13.5rem;
     }
 
     .mock_footer{
         width: 100vw;
     }
 
+    .username{
+        padding: 1.5rem;
+        padding-left: 2rem;
+        top: 3rem;
+        right: 1rem;
+    }
+
+    .tab_btn_wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        width: 16rem;
+        bottom: 0.5rem;
+    }
+
     .tab_btn{
-        width: 4.3rem;
+        width: 7rem;
         height: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 0 0.3rem;
+        margin: 0 0.25rem;
         white-space: nowrap;
         font-size: 0.72rem !important;
     }
@@ -170,5 +195,9 @@
         position: absolute;
         bottom: 5px;
         opacity: 0.2;
+    }
+
+    .left_side{
+        left: 1rem;
     }
 }
