--- a/views/components/modal/course/ViewFreeContentModal.module.css
+++ b/views/components/modal/course/ViewFreeContentModal.module.css
@@ -1,12 +1,9 @@
 
 .con{
     width: auto;
-    border-radius: 1rem;
     display: flex;
-    flex-direction: column;
-    border-width: 1px;
-    border-style: solid;
-    padding: 1.4rem;
+    flex-direction: column !important;
+    padding: 1.4rem !important;
     direction: rtl;
 }
 
@@ -67,7 +64,7 @@
 @media(max-width:767px){
 
     .con{
-        width: calc(100vw - 3rem);
+        width: calc(100vw - 1rem);
         height: auto;
         padding:1.2rem 0.5rem;
     }
