--- a/views/components/modal/editCourse/DeleteHeadingModal.module.css
+++ b/views/components/modal/editCourse/DeleteHeadingModal.module.css
@@ -6,6 +6,12 @@
     border-radius: 1rem;
 }
 
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .close_btn{
     width: 2.2rem;
     height: 2.2rem;
