--- a/views/components/global/IconButton.module.css
+++ b/views/components/global/IconButton.module.css
@@ -1,26 +1,32 @@
 .con{
-    height: 3rem;
+    height: 2.5rem;
     border-radius: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem;
     padding: 0.5rem 1.8rem;
+    transition: 100ms ease;
 }
 
 .border_mode{
-    border-style: solid;
-    border-width: 0.08rem;
+    background-color: transparent;
+    opacity: 0.8;
+    border: rgb(104, 104, 104) solid 0.14rem;
 }
-
 
 .icon{
     height: 1.5rem;
     width: 1.5rem;
-    
 }
 
 .title{
     font-weight: 500;
-    margin-left: 0.8rem;
+    white-space: nowrap;
+}
+
+.con:hover{
+    /* background: rgb(251,173,22);
+    background: linear-gradient(45deg, rgba(251,173,22,1) 0%, rgba(245,223,77,1) 80%); */
+    opacity: 0.8;
 }
