--- a/views/components/minfo/MinfoHeader.module.css
+++ b/views/components/minfo/MinfoHeader.module.css
@@ -180,16 +180,25 @@
 
     .mobile_con{
         height: 3rem;
+        padding: 0;
     }
 
     .mob_menu_btn{
         width: 2rem;
         padding: 0.4rem;
         cursor: pointer;
+        margin-right: 1rem;
+        margin-left: 3.8rem;
     }
 
     .mob_logo_img{
         height: 2.8rem;
+        width: 4.5rem;
+    }
+
+    .signup_btn{
+        margin: 0 !important;
+        width: 7rem;
     }
 
     .sm_close_btn{
