--- a/public/statics/styles/main_colors.css
+++ b/public/statics/styles/main_colors.css
@@ -1,311 +1,240 @@
-/**
-    main theme color
-**/
-.bgtc1{
-    background-color: #6F3AF9;
-}
-.ftc1{
-    color: #6F3AF9;
-}
-.btc1{
-    border-color: #6F3AF9;
+:root {
+    --maincolor1: #F5DF4D;
+    --maincolor2: #FBAD16;
+    --errorcolor: #F54D4D;
+    --successcolor: #00C853;
+    --d1: #000000;
+    --d2: #3A3A3A;
+    --d3: #939597;
+    --w1: #FFFFFF;
+    --w2: #F9F9F9;
+    --w3: #F4F4F4;
+    --w4: #E6E6E6;
+
+    --tbutton-color: #FFFFFF;
+    --tbutton-bgcolor: #F5DF4D;
 }
 
 
-/**
-    secondary theme color
-**/
-.bgtc2{
-    background-color: #541DE2;
+.tbgc1{
+    background-color: var(--maincolor1);
 }
-.ftc2{
-    color: #541DE2;
+.tc1{
+    color: var(--maincolor1);
 }
-.btc2{
-    border-color: #541DE2;
+.tbc1{
+    border-color: var(--maincolor1);
 }
-
-
-/**
-    main dark color
-**/
+.tbgc2{
+    background-color: var(--maincolor2);
+}
+.tc2{
+    color: var(--maincolor2);
+}
+.tbc2{
+    border-color: var(--maincolor2);
+}
+.tbgcerr{
+    background-color: var(--errorcolor);
+}
+.tcerr{
+    color: var(--errorcolor);
+}
+.tbcerr{
+    border-color: var(--errorcolor);
+}
+.tbgcscs{
+    background-color: var(--successcolor);
+}
+.tcscs{
+    color: var(--successcolor);
+}
+.tbcscs{
+    border-color: var(--successcolor);
+}
+.tbutton-c{
+    color: var();
+}
+.bgdark{
+    background-color: var(--d1);
+}
+.fdark{
+    color: var(--d1);
+}
+.bdcdark{
+    border-color: var(--d1);
+}
 .bgdc1{
-    background-color: #3A3A3A;
+    background-color: var(--d2);
 }
 .fdc1{
-    color: #3A3A3A;
+    color: var(--d2);
 }
 .bdc1{
-    border-color: #3A3A3A;
+    border-color: var(--d2);
 }
-
-/**
-    secondary dark color
-**/
 .bgdc2{
-    background-color: #939597;
+    background-color: var(--d3);
 }
 .fdc2{
-    color: #939597;
+    color: var(--d3);
 }
 .bdc2{
-    border-color: #939597;
+    border-color: var(--d3);
 }
-
-/**
-    third dark color
-**/
-.bgdc3{
-    background-color: #a9a9a9;
-}
-.fdc3{
-    color: #a9a9a9;
-}
-.bdc3{
-    border-color: #a9a9a9;
-}
-
-/**
-    white color
-**/
-
 .bgw{
-    background-color: #FFF;
+    background-color: var(--w1);
 }
 .fw{
-    color: #FFF;
+    color: var(--w1);
 }
 .bw{
-    border-color: #FFF;
+    border-color: var(--w1);
 }
-
-/**
-    main light color
-**/
 .bglc1{
-    background-color: #F9F9F9;
+    background-color: var(--w2);
 }
 .flc1{
-    color: #F9F9F9;
+    color: var(--w2);
 }
 .blc1{
-    border-color: #F9F9F9;
+    border-color: var(--w2);
 }
-
-/**
-    secondary light color
-**/
 .bglc2{
-    background-color: #F4F4F4;
+    background-color: var(--w3);
 }
 .flc2{
-    color: #F4F4F4;
+    color: var(--w3);
 }
 .blc2{
-    border-color: #F4F4F4;
+    border-color: var(--w3);
 }
-
-/**
-    third light color
-**/
 .bglc3{
-    background-color: #E6E6E6;
+    background-color: var(--w4);
 }
 .flc3{
-    color: #E6E6E6;
+    color: var(--w4);
 }
 .blc3{
-    border-color: #E6E6E6;
+    border-color: var(--w4);
 }
-
-/**
-    error color
-**/
-.bgec{
-    background-color: #F54D4D;
+.bgdc3{
+    background-color: var(--w5);
 }
-.fec{
-    color: #F54D4D;
+.fdc3{
+    color: var(--w5);
 }
-.bec{
-    border-color: #F54D4D;
+.bdc3{
+    border-color: var(--w5);
 }
-
-/**
-    success color
-**/
-.bgsc{
-    background-color: #00C853;
-}
-.fsc{
-    color: #00C853;
-}
-.bsc{
-    border-color: #00C853;
-}
-
-.dashed_line_lc1{
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23F9F9F9FF' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='12' stroke-linecap='square'/%3e%3c/svg%3e");
-}
-
-.dashed_line_lc2{
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23F4F4F4FF' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='12' stroke-linecap='square'/%3e%3c/svg%3e");
-}
-
-.dashed_line_dc1{
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%233A3A3AFF' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='12' stroke-linecap='square'/%3e%3c/svg%3e");
-}
-
-.dashed_line_dc2{
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23939597F' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='12' stroke-linecap='square'/%3e%3c/svg%3e");
-}
-
 /*******************************************************************************
     !important mode
 *******************************************************************************/
-
-/**
-    main theme color
-**/
-.bgtc1i{
-    background-color: #6F3AF9 !important;
+.tbgc1i{
+    background-color: var(--maincolor1) !important;
 }
-.ftc1i{
-    color: #6F3AF9 !important;
+.tc1i{
+    color: var(--maincolor1) !important;
 }
-.btc1i{
-    border-color: #6F3AF9 !important;
+.tbc1i{
+    border-color: var(--maincolor1) !important;
 }
-
-
-/**
-    secondary theme color
-**/
-.bgtc2i{
-    background-color: #541DE2 !important;
+.tbgc2i{
+    background-color: var(--maincolor2) !important;
 }
-.ftc2i{
-    color: #541DE2 !important;
+.tc2i{
+    color: var(--maincolor2) !important;
 }
-.btc2i{
-    border-color: #541DE2 !important;
+.tbc2i{
+    border-color: var(--maincolor2) !important;
 }
-
-
-/**
-    main dark color
-**/
+.tbgcerri{
+    background-color: var(--errorcolor) !important;
+}
+.tcerri{
+    color: var(--errorcolor) !important;
+}
+.tbcerri{
+    border-color: var(--errorcolor) !important;
+}
+.tbgcscsi{
+    background-color: var(--successcolor) !important;
+}
+.tcscsi{
+    color: var(--successcolor) !important;
+}
+.tbcscsi{
+    border-color: var(--successcolor) !important;
+}
+.bgdarki{
+    background-color: var(--d1) !important;
+}
+.fdarki{
+    color: var(--d1) !important;
+}
+.bdcdarki{
+    border-color: var(--d1) !important;
+}
 .bgdc1i{
-    background-color: #3A3A3A !important;
+    background-color: var(--d2) !important;
 }
 .fdc1i{
-    color: #3A3A3A !important;
+    color: var(--d2) !important;
 }
 .bdc1i{
-    border-color: #3A3A3A !important;
+    border-color: var(--d2) !important;
 }
-
-/**
-    secondary dark color
-**/
 .bgdc2i{
-    background-color: #939597 !important;
+    background-color: var(--d3) !important;
 }
 .fdc2i{
-    color: #939597 !important;
+    color: var(--d3) !important;
 }
 .bdc2i{
-    border-color: #939597 !important;
+    border-color: var(--d3) !important;
 }
-
-/**
-    third dark color
-**/
-.bgdc3i{
-    background-color: #a9a9a9 !important;
-}
-.fdc3i{
-    color: #a9a9a9 !important;
-}
-.bdc3i{
-    border-color: #a9a9a9 !important;
-}
-
-/**
-    white color
-**/
-
 .bgwi{
-    background-color: #FFF !important;
+    background-color: var(--w1) !important;
 }
 .fwi{
-    color: #FFF !important;
+    color: var(--w1) !important;
 }
 .bwi{
-    border-color: #FFF !important;
+    border-color: var(--w1) !important;
 }
-
-/**
-    main light color
-**/
 .bglc1i{
-    background-color: #F9F9F9 !important;
+    background-color: var(--w2) !important;
 }
 .flc1i{
-    color: #F9F9F9 !important;
+    color: var(--w2) !important;
 }
 .blc1i{
-    border-color: #F9F9F9 !important;
+    border-color: var(--w2) !important;
 }
-
-/**
-    secondary light color
-**/
 .bglc2i{
-    background-color: #F4F4F4 !important;
+    background-color: var(--w3) !important;
 }
 .flc2i{
-    color: #F4F4F4 !important;
+    color: var(--w3) !important;
 }
 .blc2i{
-    border-color: #F4F4F4 !important;
+    border-color: var(--w3) !important;
 }
-
-/**
-    third light color
-**/
 .bglc2i{
-    background-color: #E6E6E6 !important;
+    background-color: var(--w4) !important;
 }
 .flc2i{
-    color: #E6E6E6 !important;
+    color: var(--w4) !important;
 }
 .blc2i{
-    border-color: #E6E6E6 !important;
+    border-color: var(--w4) !important;
 }
-
-/**
-    error color
-**/
-.bgeci{
-    background-color: #F54D4D !important;
+.bgdc3i{
+    background-color: var(--w5) !important;
 }
-.feci{
-    color: #F54D4D !important;
+.fdc3i{
+    color: var(--w5) !important;
 }
-.beci{
-    border-color: #F54D4D !important;
-}
-
-/**
-    success color
-**/
-.bgsci{
-    background-color: #00C853 !important;
-}
-.fsci{
-    color: #00C853 !important;
-}
-.bsci{
-    border-color: #00C853 !important;
+.bdc3i{
+    border-color: var(--w5) !important;
 }
