--- a/public/statics/styles/colors.css
+++ b/public/statics/styles/colors.css
@@ -10,6 +10,7 @@
     --w2: #F9F9F9;
     --w3: #F4F4F4;
     --w4: #E6E6E6;
+    --w5: #C0C0C0;
 
     --tbutton-color: #FFFFFF;
     --tbutton-bgcolor: #6F3AF9;
